--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   cupertino_icons: ^1.0.8
   hive: ^2.2.3
   hive_flutter: ^1.1.0
+  firebase_core: ^4.2.1
+  shared_preferences: ^2.5.3
 
 dev_dependencies:
   flutter_test:
